Add header menu

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <title>ANONYMOUS PROXY</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
   <body>
     <div class="page">
-      <include src="./partials/header.html" title="Bienvenidos a Adalab"></include>
+      <include src="./partials/header.html"></include>
       <include src="./partials/main.html"></include>
-      <include
+      <!-- <include
         src="./partials/link.html"
         aClass="link__adalab"
         text="Adalab"
@@ -24,7 +30,7 @@
         aClass="link__github"
         text="GitHub"
         url="https://github.com"
-      ></include>
+      ></include> -->
       <include src="./partials/footer.html"></include>
     </div>
   </body>
