--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/0c04f9b7b8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="page">
